tests/errors/type7.ramen
SELECT IF true THEN 1 ELSE "glop" AS x;
